<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2b2d30">

    <!-- ScrollView for instructions -->
    <ScrollView
        android:id="@+id/help_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Instructions TextView -->
            <TextView
                android:id="@+id/help_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/howTo"
                android:textSize="16sp"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/help_instructions1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/Step1"
                android:textSize="16sp"
                android:textColor="#FFFFFF" />

            <!-- Add 6 ImageViews for the instructions -->
            <ImageView
                android:id="@+id/image1"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/main_menu" />

            <TextView
                android:id="@+id/help_instructions2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/Step2"
                android:textSize="16sp"
                android:textColor="#FFFFFF" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/search_menu" />

            <ImageView
                android:id="@+id/image5"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/generating_message" />

            <TextView
                android:id="@+id/help_instructions3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/Step3"
                android:textSize="16sp"
                android:textColor="#FFFFFF" />

            <ImageView
                android:id="@+id/image6"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/result_menu" />

            <TextView
                android:id="@+id/help_instructions4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/Step4"
                android:textSize="16sp"
                android:textColor="#FFFFFF" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/enter_song" />

            <TextView
                android:id="@+id/help_instructions5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/Step5"
                android:textSize="16sp"
                android:textColor="#FFFFFF" />

            <ImageView
                android:id="@+id/image4"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/try_different_song" />

        </LinearLayout>
    </ScrollView>

    <!-- Button fixed at the bottom -->
    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bmain"
        android:layout_margin="16dp"
        android:textColor="#FFFFFF"
        android:background="#202427"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>