<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202427"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnGetStarted"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:backgroundTint="#4CAF50"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:paddingVertical="12dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnHelp"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:backgroundTint="#2196F3"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:paddingVertical="12dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnGetStarted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>
